1999-09-14  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* mule-charset.c (latin_iso8859_2_to_ucs NULL): Add pseudo
	definition for non-UTF-2000 Mule.
	(latin_iso8859_3_to_ucs): Likewise.
	(latin_iso8859_4_to_ucs): Likewise.
	(latin_iso8859_9_to_ucs): Likewise.
	(latin_jisx0201_to_ucs): Likewise.
	(MIN_CHAR_THAI): Likewise.
	(MAX_CHAR_THAI): Likewise.
	(MIN_CHAR_GREEK): Likewise.
	(MAX_CHAR_GREEK): Likewise.
	(MIN_CHAR_HEBREW): Likewise.
	(MAX_CHAR_HEBREW): Likewise.
	(MIN_CHAR_HALFWIDTH_KATAKANA): Likewise.
	(MAX_CHAR_HALFWIDTH_KATAKANA): Likewise.
	(MIN_CHAR_CYRILLIC): Likewise.
	(MAX_CHAR_CYRILLIC): Likewise.

1999-09-14  MORIOKA Tomohiko  <tomo@etl.go.jp>

	* char-ucs.h (breakup_char_1): Use
	`Vdefault_coded_charset_priority_list' for hebrew-iso8859-8,
	thai-tis620 and katakana-jisx0201 area.

1999-09-13  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* char-ucs.h (breakup_char_1): Use
	`Vdefault_coded_charset_priority_list' for cyrillic-iso8859-5
	area.

	* text-coding.c (reset_encoding_stream): Fixed.
	(char_encode_ucs4): Delete `& 255'.

	* char-ucs.h (breakup_char_1): Use
	`Vdefault_coded_charset_priority_list' for greek-iso8859-7 area.

1999-09-13  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* file-coding.c (Fmake_coding_system): Don't set up
	`codesys->fixed.size'.
	(encode_coding_no_conversion): Don't refer
	`str->codesys->fixed.size'.

1999-09-13  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* mule-charset.c, char-ucs.h (latin_a_char_to_charset): Deleted.
	(latin_a_char_to_byte1): Deleted.
	(latin_a_char_to_byte2): Deleted.

1999-09-13  MORIOKA Tomohiko  <tomo@urania.m17n.org>

	* mule-charset.c (make_charset): Add new argument `ucs_min',
	`ucs_max' and `code_offset'.
	(charset_get_byte1): New implementation [delete specific charset
	depended implementations].
	(Fmake_charset): Modify for `make_charset'.
	(Fmake_reverse_direction_charset): Likewise.
	(complex_vars_of_mule_charset): Likewise.

	* char-ucs.h (struct Lisp_Charset): Add `ucs_min', `ucs_max' and